--- a/public/popup.html
+++ b/public/popup.html
@@ -18,7 +18,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <title>React App</title>
+    <title>React Redux App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
