--- a/public/popup.html
+++ b/public/popup.html
@@ -19,6 +19,9 @@
       Only files inside the `public` folder can be referenced from the HTML.
     -->
     <title>React Redux App</title>
+    <% if (process.env.NODE_ENV !== 'production') { %>
+    <script type="text/javascript" src="http://localhost:8097"></script>
+    <% } %>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
